# rag-eval-kit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  curriculum.md  docker-compose.yml  memo.md  plan.md  pyproject.toml  research.md
.github/workflows/: ci.yml
data/: golden_set.json
documents/: bench-one-explanation.md
notebooks/: 00_dataset_prep.ipynb  01_pipeline.ipynb  02_ragas_eval.ipynb  03_vectordb_bench.ipynb
scripts/: collect_eval_inputs.py  index_corpus.py  run_ragas_eval.py
src/: __init__.py  bench.py  chunker.py  config.py  dataset.py  embedder.py  evaluator.py  rag.py  retrieval_metrics.py  retriever.py
src/backends/: __init__.py  base.py  neo4j_backend.py  pgvector_backend.py  qdrant_backend.py
