[project]
name = "rag-eval-kit"
version = "0.1.0"
description = "RAGAS로 RAG 파이프라인 품질 측정 + pgvector / Qdrant / Neo4j 벡터DB 비교 벤치마크"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # RAGAS 평가 + LLM 연동
    "ragas",
    "langchain",
    "langchain-community",
    "langchain-anthropic",
    "langchain-ollama",
    # LangChain 1.x 표준 통합 패키지 (community sunset 대응)
    "langchain-text-splitters>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-postgres>=0.0.17",
    # 벡터DB 클라이언트
    "psycopg2-binary",
    "pgvector",
    "qdrant-client",
    "neo4j",
    # 임베딩 / 데이터셋
    "sentence-transformers",
    "datasets",
    # 유틸
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
